# CUDATest

./: CMakeLists.txt
include/: CudaWrapper.h
src/: CudaWrapper.cu  main.cpp
